force-app/main/default/objects/Job__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>