force-app/main/default/objects/Job__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Qualification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Full-Stack development</fullName>
            </value>
            <value>
                <fullName>Salesforce admin</fullName>
            </value>
            <value>
                <fullName>Sr developor</fullName>
            </value>
            <value>
                <fullName>manger</fullName>
            </value>
            <value>
                <fullName>Hr manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>