force-app/main/default/objects/Job__c/fields/Last_date_to_apply__c.field-meta.xml
<CustomField>
    <fullName>Last_date_to_apply__c</fullName>
    <description>Last date to apply</description>
    <label>Last date to apply</label>
    <type>Date</type>
</CustomField>