force-app/main/default/objects/Job__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Post-graduate</fullName>
            </value>
            <value>
                <fullName>under-graduate</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>