force-app/main/default/objects/Job__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>select the valid skills</description>
    <inlineHelpText>select the valid skills</inlineHelpText>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Skills</valueSetName>
    </valueSet>
</CustomField>